7.13.0 (15-05-2024)
- Refactor: Adds legal pt spring controllers [#qubIT-Omnis-5831]

7.12.0 (09-05-2024)
- Refactor: Move Spring controllers from fenixedu-candidacies-extensions [#qubIT-Omnis-5757]

7.11.0 (30-04-2024)
- Refactor: Adds HelpdeskEntrypointController [#qubIT-Omnis-5784]

7.10.0 (30-04-2024)
- Refactor: Uses new photo controller url in jsp [#qubIT-Omnis-5783]

7.9.2 (30-04-2024)
- Bug fix: Adding class that uses @BennuSpringModule to register spaces controllers [#qubIT-Omnis-5811]

7.9.1 (29-04-2024)
- Refactor: Add missing fenixedu-spaces UI css and js [#qubIT-Omnis-5753]

7.9.0 (17-04-2024)
- Refactor: Add fenixedu-spaces UI controllers and views [#qubIT-Omnis-5753]

7.8.0 (17-04-2024)
- Refactor: Removes zip4j dependency [#qubIT-Omnis-5739]

7.7.0 (03-04-2024)
- Improvement: Modified how StudentActive operates regarding first year first time students [#UL-FF-3273]

7.6.0 (25-03-2024)
- Refactor: Removing dependencies from bennu-struts [#qubIT-Fenix-5098]

7.5.0 (06-03-2024)
- Refactor: PersonServices not extending academic-extensions service anymore [#qubIT-Fenix-4784]
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

7.4.0 (09-10-2023)
- Refactor: Remove hardcoded permissions from academic-core domain [#qubIT-Fenix-4434]

7.3.2 (04-08-2023)
- Bug fix: Change registration deactivation task to support all type of calendars 

7.3.1 (02-08-2023)
- Refactor: Change student curricular plan comparator to use interval

7.3.0 (27-07-2023)
- Refactor: Make compatible with latest academic-core
- Refactor: Remove deprecated evaluation season management functionalities
- Refactor: Remove deprecated registration history functionality

7.2.0 (28-06-2023)
- Refactor: Make compatible with latest academic-core and academic-extensions 
- Refactor: Remove deprecated execution course pages overrides and services

7.1.1 (06-02-2023)
- Refactor: Add missing Department methods in order to mantain retro-compability

7.1.0 (06-02-2023)