@@ -1,3 +1,5 @@
+- Refactor: Adds remaining academic spring classes [#qubIT-Omnis-5807]
+
 7.13.0 (15-05-2024)
 - Refactor: Adds legal pt spring controllers [#qubIT-Omnis-5831]
 
